manifests/ingress-exercises.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: exercises-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 1001
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 1003
